2009-05-09  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::MainLoop): 
	Run either the test loop (m_eventLoop) or the full loop
	(m_mainLoop) depending on the state of
	WxGuiTestHelper::GetInteractive().

2009-05-07  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* include/wxGuiTest/WxGuiTestApp.h (WxGuiTestApp::SetMainLoop),
	(WxGuiTestApp::GetMainLoop): New functions, to permit dependency
	injection of the event loop.

2009-05-05  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::postNextEvent):
	now returns false if the handler is NULL.

	* build/bakefile/wxGuiTesting.bkl: Removed the platform_flags
	template, which was present to support compiling in gtk.

	* configure.ac: Removed the call to AM_PATH_GTK_2_0; native events
	handling is abandoned, so it's not necessary.

	* bootstrap: Removed the path to the GTK aclocal directory, same
	reason as above.
	
2009-05-03  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppGuiTest/TestEventLoopTest: New Test Class

	* include/wxGuiTest/WxGuiTestApp.h (discardCurrentQueue): 
	(Dispatch): New member functions. 

2009-05-02  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppTest/EventQueueTest.h: New test class

2009-05-01  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>
	* include/wxGuiTest/EventQueue.h: Moved from src because
	WxGuiTestApp.h needs to include it.

	* src/wxGuiTest/WxGuiTestApp.cpp (WxGuiTestApp::newEventQueue),
	(WxGuiTestApp::queueEvent, WxGuiTestApp::nextEventQueue),
	(WxGuiTestApp::postNextEvent, WxGuiTestApp::pending):
	New functions to support event queues.

	
2009-03-26  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/EventQueue.h: New file. Defines a very simple
	template class for queues and typedefs it to EventQueue and
	EventQStore. 

	* include/wxGuiTest/WxGuiTestApp.h: 
	(queueEvent, postNextEvent, pending): New event queue handling